// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`helpers/mapAction should map action 1`] = `
Object {
  "action": "ACTION MAPPED !",
  "state": Object {},
}
`;

exports[`helpers/mapPayload should map payload 1`] = `
Object {
  "action": Object {
    "payload": "PAYLOAD MAPPED !",
    "type": "TYPE",
  },
  "state": Object {},
}
`;

exports[`helpers/mapPayload should map payload without type 1`] = `
Object {
  "action": Object {
    "payload": "PAYLOAD MAPPED !",
    "type": "TYPE",
  },
  "state": Object {},
}
`;
